@@ -99,7 +99,7 @@ public class SliderController extends BaseGWTSpringController implements SliderR
     SliderDTO sliderDTO = new SliderDTO(slider.getOid(), slider.getDisplayName());
     if (slider.getSetValueCmd() != null) {
       DeviceCommand dc = slider.getSetValueCmd().getDeviceCommand();
-      sliderDTO.setCommand(new DeviceCommandDTO(dc.getOid(), dc.getDisplayName(), dc.getProtocol().getType()));
+      sliderDTO.setCommand(new DeviceCommandDTO(dc.getOid(), dc.getDisplayName(), dc.getFullyQualifiedName(), dc.getProtocol().getType()));
     }
     return sliderDTO;
   }
