@@ -13,6 +13,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - Add pulseTime parameter to AMX protocol (MODELER-434)
    - Enfore unicity of element id in schemas (MODELER-412)
    - Add 'data' attribute to protocol xml for 1-wire (MODELER-435)
+   - In edit/new macro window, command tree must include device name (MODELER-361)
 
  Fixes:
 
